--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@ For any commercial use or licensing inquiries, please contact: rymentz.studio@gm
                 <span>&#x1F4A1;</span>  
                 <span>Wind turbine (L1) (5-6 KAS)<br>⚡ +50, 💎 +0.2/day (+20% bonus)</span>
             </div>
-            <!-- New section for rarity levels -->
+            <!-- Section for rarity levels -->
             <div class="legend-section">
                 <h4>Building Variant Rarity Levels</h4>
                 <p>Each building type has multiple variants with different rarity levels:</p>
