--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,31 @@
 <!--
 KasLand Application
-Copyright (c) 2024 Rymentz (rymentz.studio@gmail.com)
+© 2024 Rymentz (rymentz.studio@gmail.com). All rights reserved.
 
-This work is licensed under the Creative Commons Attribution-NonCommercial 4.0 
-International License. To view a copy of this license, visit:
-http://creativecommons.org/licenses/by-nc/4.0/
+Source Code License:
+The source code of this application is licensed under the Creative Commons 
+Attribution-NonCommercial 4.0 International License (CC BY-NC 4.0).
+To view a copy of this license, visit: http://creativecommons.org/licenses/by-nc/4.0/
 
-You are free to:
-- Share: copy and redistribute the material in any medium or format
-- Adapt: remix, transform, and build upon the material
+Regarding the source code, you are free to:
+- Share: copy and redistribute the code in any medium or format
+- Adapt: remix, transform, and build upon the code
 
 Under the following terms:
 - Attribution: You must give appropriate credit, provide a link to the license,
   and indicate if changes were made.
-- NonCommercial: You may not use the material for commercial purposes.
+- NonCommercial: You may not use the code for commercial purposes.
 
-For any commercial use or licensing inquiries, please contact: rymentz.studio@gmail.com
+Game Assets:
+All game assets (including but not limited to graphics, audio, and text content) 
+are not covered by the CC BY-NC 4.0 license and remain under full copyright protection. 
+These assets may not be used, reproduced, or distributed without explicit written 
+permission.
+
+For any commercial use, licensing inquiries, or permission to use game assets, 
+please contact: rymentz.studio@gmail.com
 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
