--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,7 @@ please contact: rymentz.studio@gmail.com
             </div>
         </div>
     </div>
+    <div id="kasland-full-status" style="display: none;"></div>
     <div id="kasland-status"></div>
     <div id="game-container">
         <div id="tiles-container"></div>
@@ -103,6 +104,10 @@ please contact: rymentz.studio@gmail.com
                 <span>&#x1F4A1;</span>  
                 <span>Wind turbine (L1) (10 KAS)<br>⚡ +50, 💎 +0.2/day (+10% bonus)</span>
             </div>
+            <div class="legend-item">
+                <span>&#x1F3E0;</span>  
+                <span>Medium house (20 KAS)<br>⚡ -20, 💎 +0.4/day</span>
+            </div>            
             <!-- Section for rarity levels -->
             <div class="legend-section">
                 <h4>Building Variant Rarity Levels</h4>
